with functional map and legend

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
 
 <button type="button" class="btn btn-info" id="buttonAll" >All Tweets</button>
-<button type="button" class="btn btn-primary" id="buttonLocal">Local Tweets</button>
-<button type="button" class="btn btn-warning" id="buttonNeighbor">Visitor Tweets</button>
-<button type="button" class="btn btn-success" id="buttonTypology" style="width:370px;">Gentrification Typology</button>
+<button type="button" class="btn btn-info" id="buttonLocal">Local Tweets</button>
+<button type="button" class="btn btn-info" id="buttonVisitor">Visitor Tweets</button>
+<button type="button" class="btn btn-primary" id="buttonTypology" style="width:370px;">Gentrification Typology</button>
 
 
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <a class="nav-item nav-link" id="nav-about-tab" data-toggle="tab" href="#nav-about" role="tab" aria-controls="nav-home" aria-selected="true">About</a>
+        <a class="nav-item nav-link active" id="nav-about-tab" data-toggle="tab" href="#nav-about" role="tab" aria-controls="nav-home" aria-selected="true">About</a>
         <a class="nav-item nav-link" id="nav-methods-tab" data-toggle="tab" href="#nav-methods" role="tab" aria-controls="nav-profile" aria-selected="false">Methodology</a>
-        <a class="nav-item nav-link active" id="nav-legend-tab" data-toggle="tab" href="#nav-legend" role="tab" aria-controls="nav-contact" aria-selected="false">Legend</a>
+        <a class="nav-item nav-link" id="nav-legend-tab" data-toggle="tab" href="#nav-legend" role="tab" aria-controls="nav-contact" aria-selected="false">Legend</a>
       </div>
     </nav>
     <div class="tab-content" id="nav-tabContent">
@@ -42,9 +42,9 @@
           <span>a lot of tweets</span><br/>
         </div>
 
-        <div class="legend neighbor-legend">
+        <div class="legend visitor-legend">
           <!-- We'll programmatically make the legend here -->
-          <span>Neighbor Tweets</span><br/>
+          <span>Visitor Tweets</span><br/>
           <span>a lot of tweets</span><br/>
         </div>
 
