--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway|Lato" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="/css/styles.css?v=1.0">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
             <p>All data was collected and provided by the project sponsor, the
               <a href="https://www.urbandisplacement.org/">Urban Displacement Project (UDP)</a> at UC Berkeley.
               The UDP is a research initiative that aims to understand the processes of gentrification and
-              displacement. The goal of UDP is to "produce rigorous research and create tools to empower advocates
+              displacement, and their goal is to "produce rigorous research and create tools to empower advocates
               and policymakers, to reframe conversations, and to train and inspire the next generation of leaders
               in equitable development."</p>
             </div>
